--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -25,6 +25,7 @@
     <![endif]-->
   <div class="main-content">
     {{>header}}
+    <P>This site was created by Yara ebrahim. It uses data from mapbox.com</P>
     <img class="portrait" src="/img/dress.jpg" />
   </div>
 
